# HOG-SVM

./: CMakeLists.txt  HOG.cpp  README.md  Training.cpp  Training.h  Utility.cpp  Utility.h
